--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       <input id="email" type="email" placeholder="Email" autocomplete="username" />
       <input id="password" type="password" placeholder="Пароль" autocomplete="current-password" />
       <button id="authBtn">Войти / Зарегистрироваться</button>
-      <p id="authStatus" class="muted">Введите e-mail и пароль — если учётной записи нет, она создастся автоматически.</p>
+      <p id="authStatus" class="muted">Введите e-mail и пароль — если учётной записи нет, напишите на WhatssApp.</p>
       <button id="helpBtn" class="small-ghost">Я администратор — где поменять доступ?</button>
     </div>
   </div>
@@ -640,6 +640,7 @@
   </script>
 </body>
 </html>
+
 
 
 
